--- a/ShopMaiHien/Views/_ViewImports.cshtml
+++ b/ShopMaiHien/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using ShopMaiHien.Models
 @using ShopMaiHien.Models.AccountViewModels
 @using ShopMaiHien.Models.ManageViewModels
+@using ShopMaiHien.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
