create login for admin

--- a/ShopMaiHien/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShopMaiHien/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
-                        <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+                        <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Shop MaiHien!</span></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -331,7 +331,8 @@
     <script src="~/lib/notifyjs/dist/styles/metro/notify-metro.js"></script>
     <script src="~/lib/bootbox/bootbox.js"></script>
 
-    <script src="~/app/controllers/shared/shopmaihien.js"></script>
+
+    <script src="~/app/shared/maihien.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="~/admin-side/js/custom.js"></script>
 </body>
