--- a/ShopMaiHien/Areas/Admin/Views/Login/Index.cshtml
+++ b/ShopMaiHien/Areas/Admin/Views/Login/Index.cshtml
@@ -37,16 +37,16 @@
                 <section class="login_content">
                     <form id="frmLogin">
                         @Html.AntiForgeryToken()
-                        <h1>Đăng nhập</h1>
+                        <h1>Login</h1>
                         <div>
-                            <input type="text" class="form-control" name="userName" placeholder="Tên đăng nhập" id="txtUserName" required="" />
+                            <input type="text" class="form-control" name="userName" placeholder="User Name" id="txtUserName" required="" />
                         </div>
                         <div>
                             <input type="password" class="form-control" name="password" id="txtPassword" placeholder="Password" required="" />
                         </div>
                         <div>
-                            <a class="btn btn-default submit" href="#" id="btnLogin">Đăng nhập</a>
-                            <a class="reset_pass" href="#">Quên mật khẩu?</a>
+                            <a class="btn btn-default submit" href="#" id="btnLogin">Login</a>
+                            <a class="reset_pass" href="#">Forgot password?</a>
                         </div>
 
                         <div class="clearfix"></div>
@@ -74,7 +74,6 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation/dist/additional-methods.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <script src="~/lib/jquery-validation/localization/messages_vi.js"></script>
 
     <script src="~/app/shared/maihien.js"></script>
     <script src="~/app/controllers/login/index.js"></script>
