--- a/ShopMaiHien/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ShopMaiHien/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using ShopMaiHien.Models.AccountViewModels
 @using ShopMaiHien.Models.ManageViewModels
 @using ShopMaiHien.Data.Entities
+@using ShopMaiHien.Application.ViewModels.System
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
