--- a/ShopMaiHien/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShopMaiHien/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -181,10 +181,10 @@
     <script src="~/lib/nprogress/nprogress.js"></script>
     <!-- Chart.js -->
     <script src="~/lib/mustache/mustache.js"></script>
-
+    <!--paging-->
+    <script src="~/lib/twbs-pagination/jquery.twbsPagination.js"></script>
     <script src="~/lib/Chart.js/dist/Chart.js"></script>
     <!-- jQuery Sparklines -->
-
     <script src="~/lib/jquery-sparkline/dist/jquery.sparkline.js"></script>
     <!-- Flot -->
     @*<script src="../vendors/Flot/jquery.flot.js"></script>
